resolved #47 changed tooltip z-index

--- a/source/assets/stylesheets/components/_tooltip.sass
+++ b/source/assets/stylesheets/components/_tooltip.sass
@@ -12,7 +12,7 @@
   border-color: #000
   color: #fff
   +border-radius (5px)
-  z-index: 9002
+  z-index: 9012
 
 .tooltip-content
   font-size: 12px
